# cocotb-coverage

./: pyproject.toml
examples/fifo/hdl/: fifo.v
examples/fifo/tests/: test_fifo.py
examples/pkt_switch/tests/: test_pkt_switch.py
tests/test_coverage/: coverage_test.py  coverage_test_main.py
tests/test_crv/: crv_test.py  crv_test_main.py
