[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotb-coverage"
dynamic = ["version"]
description = "Functional Coverage and Constrained Randomization Extensions for Cocotb"
authors = [{ name = "Marek Cieplucha", email = "mciepluc@gmail.com" }]
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cocotb > 1.9", "python-constraint", "pyyaml"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/mciepluc/cocotb-coverage"

[project.optional-dependencies]
dev = ["pytest", "cocotb-bus", "numpy"]
